# IDCD_DRL_MMC

./: README.md  requirements.txt
communication_exam/: client.py  echo_server.c
mna_solver/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  colon.c  colon.h  compileInfo.mat  main.c  main.h  mldivide.c  mldivide.h  mna_solver.bat  mna_solver.c  mna_solver.h  mna_solver_data.h  mna_solver_initialize.c  mna_solver_initialize.h  mna_solver_terminate.c  mna_solver_terminate.h  mna_solver_types.h  mod.c  mod.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
mna_solver/examples/: main.c
mna_solver/html/: report.mldatx
mna_solver/interface/: _coder_mna_solver_api.c  _coder_mna_solver_api.h  _coder_mna_solver_info.c  _coder_mna_solver_info.h  _coder_mna_solver_mex.c  _coder_mna_solver_mex.h
mna_solver1/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  colon.c  colon.h  compileInfo.mat  gcGuiReport.mat  main.c  main.h  mldivide.c  mldivide.h  mldivide_original.c  mldivide_original.h  mna_solver1.c  mna_solver1.h  mna_solver1_alloc.c  mna_solver1_alloc.h  mna_solver1_data.h  mna_solver1_initialize.c  mna_solver1_initialize.h  mna_solver1_terminate.c  mna_solver1_terminate.h  mna_solver1_types.h  mod.c  mod.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
mna_solver1/html/: report.mldatx
mna_solver1/interface/: _coder_mna_solver1_api.c  _coder_mna_solver1_api.h  _coder_mna_solver1_info.c  _coder_mna_solver1_info.h  _coder_mna_solver1_mex.c  _coder_mna_solver1_mex.h
scripts/: MMC_env.py  PPO_test.py  PPO_train.py  mmc_sim_server.c
